--- a/_posts/0001-01-01-001-literature.md
+++ b/_posts/0001-01-01-001-literature.md
@@ -40,8 +40,8 @@ description: All you need to efficiently profile and analyze your profiles
 - **All JFR Events** - [https://sap.github.io/SapMachine/jfrevents/](https://sap.github.io/SapMachine/jfrevents/)
 - **JFR View command** - [https://egahlin.github.io/2023/05/30/views.html](https://egahlin.github.io/2023/05/30/views.html)
 - **JFR Streaming** - [https://hirt.se/blog/?p=1239](https://hirt.se/blog/?p=1239)
+- **JFR Streaming (JEP)** - [https://openjdk.org/jeps/349](https://openjdk.org/jeps/349)
 - **JFR Remote Streaming** - [https://egahlin.github.io/2021/05/17/remote-recording-stream.html](https://egahlin.github.io/2021/05/17/remote-recording-stream.html)
-- **JFR Remote Streaming (JEP)** - [https://openjdk.org/jeps/349](https://openjdk.org/jeps/349)
 - **Compressing Flight Recordings** - [https://hirt.se/blog/?p=1166](https://hirt.se/blog/?p=1166)
 - **JFR CLI Configuration** - [https://egahlin.github.io/2022/05/31/improved-ergonomics.html](https://egahlin.github.io/2022/05/31/improved-ergonomics.html)
 - **The JDK Flight Recorder File Format** - [https://www.morling.dev/blog/jdk-flight-recorder-file-format/](https://www.morling.dev/blog/jdk-flight-recorder-file-format/)
@@ -51,6 +51,7 @@ description: All you need to efficiently profile and analyze your profiles
 - **Programmer's Guide to JDK Flight Recorder** - [https://www.youtube.com/watch?v=AgFOJEkBVjg](https://www.youtube.com/watch?v=AgFOJEkBVjg)
 - **Sources - JCMD command** - [https://github.com/openjdk/jdk/blob/master/src/jdk.jfr/share/classes/jdk/jfr/internal/dcmd/DCmdStart.java](https://github.com/openjdk/jdk/blob/master/src/jdk.jfr/share/classes/jdk/jfr/internal/dcmd/DCmdStart.java)
 - **Sources - JFR command** - [https://github.com/openjdk/jdk/blob/master/src/jdk.jfr/share/classes/jdk/jfr/internal/tool/Command.java](https://github.com/openjdk/jdk/blob/master/src/jdk.jfr/share/classes/jdk/jfr/internal/tool/Command.java)
+- **Sources - ExecutionSample Event (algorithm)** - [https://github.com/openjdk/jdk/blob/master/src/hotspot/share/jfr/periodic/sampling/jfrThreadSampler.cpp](https://github.com/openjdk/jdk/blob/master/src/hotspot/share/jfr/periodic/sampling/jfrThreadSampler.cpp)
 
 **JVM JIT**
 - **JIT thresholds** - [https://www.lmax.com/blog/staff-blogs/2016/03/05/observing-jvm-warm-effects/](https://www.lmax.com/blog/staff-blogs/2016/03/05/observing-jvm-warm-effects/)
